@@ -96,6 +96,8 @@ upslog will run in the background, regardless of logging target or debugging.
 Monitor this UPS.  The format for this option is
 +upsname[@hostname[:port]]+.  The default hostname is "localhost".
 +
+The upsname may be an asterisk `*` to query UPSes currently served by hostname.
++
 Requires that the `-l <logfile>` option is also used for the single-system
 logging.  Can be used with the `-m <tuple>`, will be added to the list.
 
@@ -107,6 +109,8 @@ specification, separated by commas. An example would be:
 ----
 upsname@hostname:9999,/var/log/nut/cps.log
 ----
++
+The upsname may be an asterisk `*` to query UPSes currently served by hostname.
 +
 Tuples may specify `-` as the logfile, to emit messages on `stdout`
 (e.g. to be collected by the system journal for services).
